[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aa-blacklist-csv-import"
version = "0.2.1"
description = "CSV-importpagina en management-commando voor allianceauth-blacklist"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "allianceauth-blacklist",
]

[tool.setuptools]
packages = [
    "blacklist_csv_import",
    "blacklist_csv_import.management",
    "blacklist_csv_import.management.commands",
]

[tool.setuptools.package-data]
blacklist_csv_import = ["templates/**/*.html"]
